--- a/api/package.json
+++ b/api/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "MATERNALLE API",
+  "name": "maternalle-api",
   "version": "0.0.1",
   "description": "API com Express e Prisma para Supabase",
   "main": "api/server.js",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prisma": "^6.17.1"
   },
   "scripts": {
-    "start": "node api/server.js", 
-    "dev": "nodemon api/server.js", 
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "set DATABASE_URL=%DIRECT_URL% && npx prisma migrate dev --name init"
   }
