--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "api/server.js",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "^6.18.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -13,11 +13,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.17.1"
+    "prisma": "^6.18.0"
   },
   "scripts": {
     "start": "node server.js",
