--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{}
+{
+  "name": "maternalle-root",
+  "private": true,
+  "scripts": {
+    "dev:app": "npm --prefix app run dev",
+    "dev:api": "npm --prefix api run dev",
+    "build": "npm --prefix app run build"
+  }
+}
